details, faq, sponsorship

--- a/_includes/head.njk
+++ b/_includes/head.njk
@@ -9,6 +9,7 @@
 </head>
 <body class="text-white font-sans">
   <div class="fixed inset-0">
-    <canvas class="" id="canvas"></canvas>
+    <div class="absolute inset-0 gradient-background"></div>
+    <canvas class="w-full h-screen" id="canvas"></canvas>
   </div>
-  <section class="relative z-10 gradient-background">
+  <section class="relative z-10">
