--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -13,7 +13,6 @@
       </div>
       <div class="md:ml-auto md:w-auto w-full">
         <a class="font-black border-b-2 transition-1 border-transparent hover:border-white" href="mailto:{{ global.email }}">{{ global.email }}</a>
-        <a class="ml-8 font-black border-b-2 transition-1 border-transparent hover:border-white" href="tel:{{ global.phone }}">{{ global.phone }}</a>
       </div>
     </div>
   </footer>
@@ -121,6 +120,23 @@
     }
 
     animation();
+
+    //Mobile Menu
+
+    const menuButton = document.getElementById("menu-button"),
+          menu = document.getElementById("menu"),
+          body = document.getElementsByTagName("body")[0];
+
+    function openMenu() {
+        if (body.classList.contains("menu-open")) {
+            body.classList.remove("menu-open");
+            menuButton.innerHTML = "Menu";
+        } else {
+            body.classList.add("menu-open");
+            menuButton.innerHTML = "Close";
+        }
+    }
+
 </script>
 </body>
 </html>
