--- a/css/main.src.css
+++ b/css/main.src.css
@@ -39,8 +39,63 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-h2 {
+body.menu-open {
+    overflow-y: hidden;
+}
+
+.menu-open .mobile-menu {
+    transform: translateY(0);
+}
+
+.mobile-menu {
+    transform: translateY(-100%);
+    transition: transform 1s cubic-bezier(0.19,1,0.22,1);
+}
+
+@screen lg {
+    .mobile-menu {
+        transform: translateY(0);
+    }
+}
+
+.content h1, h2, h3, h4 {
     @apply text-2xl;
+    @apply leading-none;
+    @apply mb-2;
+    @apply font-bold;
+}
+
+.content h1 {
+    @apply text-5xl;
+}
+
+.content h2 {
+    @apply mb-6;
+}
+
+.content h4 {
+    @apply text-xl;
+}
+
+.content p {
+    @apply text-base;
+    @apply mb-4;
+}
+
+.content a {
+    @apply underline;
+}
+
+.content img {
+    @apply mb-8;
+}
+
+a:hover {
+    @apply no-underline;
+}
+
+.content hr {
+    @apply h-4;
 }
 
 .text-indent {
