--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -5,7 +5,7 @@ layout: layouts/base.njk
   <div class="max-w-6xl mx-auto lg:px-6 px-4">
     <div class="flex flex-wrap flex-row-reverse items-center lg:pt-12 lg:pb-24 pb-12">
       <div class="lg:w-3/5 w-full lg:pl-16 lg:mb-0 mb-10">
-        <img class="border-8 border-white lg:rotate-1 w-full h-auto" src="{{ home.header.image }}" alt="{{ global.title }}">
+        <img class="border-8 border-white lg:rotate-1 w-full h-auto rounded shadow-xl" src="{{ home.header.image }}" alt="{{ global.title }}">
       </div>
       <div class="lg:w-2/5 w-full lg:pr-8">
         <h2 class="lg:text-5xl text-3xl leading-tight font-serif font-bold mb-6 lg:mr-16 lg:pr-8">{{ home.header.heading }}</h2>
