--- a/css/main.css
+++ b/css/main.css
@@ -7221,6 +7221,8 @@ body.menu-open {
 
 .content img {
   margin-bottom: 2rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
 a:hover {
