--- a/_includes/layouts/general.njk
+++ b/_includes/layouts/general.njk
@@ -8,10 +8,10 @@ layout: layouts/base.njk
 <div class="bg-white text-blue-900 pt-6 pb-12">
   <div class="max-w-6xl mx-auto lg:px-6 px-4">
     <div class="flex flex-wrap">
-      <div class="lg:w-2/5 w-full lg:pr-24">
-        <h1 class="text-5xl font-black leading-none mb-2">{{ title }}</h1>
-        <p class="lg:text-2xl mb-8">{{ subtitle }}</p>
-        <p class="lg:text-xl mb-2">{{ event_date }}</p>
+      <div class="lg:w-2/5 w-full lg:pr-24 mb-8">
+        <h1 class="lg:text-5xl text-4xl font-black leading-none mb-2">{{ title }}</h1>
+        <p class="lg:text-2xl text-xl lg:mb-8 mb-4">{{ subtitle }}</p>
+        <p class="lg:text-xl lg:mb-2">{{ event_date }}</p>
         <a class="lg:text-xl leading-tight underline hover:no-underline" href="{{ location_url }}">{{ location }}</a>
       </div>
       <div class="lg:w-3/5 w-full pt-3 content">
