--- a/_includes/layouts/general.njk
+++ b/_includes/layouts/general.njk
@@ -9,7 +9,7 @@ layout: layouts/base.njk
   <div class="max-w-6xl mx-auto lg:px-6 px-4">
     <div class="flex flex-wrap">
       <div class="lg:w-2/5 w-full lg:pr-24 mb-8">
-        <h1 class="lg:text-5xl text-4xl font-black leading-none mb-2">{{ title }}</h1>
+        <h1 class="lg:text-5xl text-4xl font-black leading-tight mb-2">{{ title }}</h1>
         <p class="lg:text-2xl text-xl lg:mb-8 mb-4">{{ subtitle }}</p>
         <p class="lg:text-xl lg:mb-2">{{ event_date }}</p>
         <a class="lg:text-xl leading-tight underline hover:no-underline" href="{{ location_url }}">{{ location }}</a>
