--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -1,6 +1,6 @@
   <footer class="lg:text-base text-sm md:text-left text-center">
-    <svg class="w-full h-auto" width="1440" height="65" viewBox="0 0 1440 65" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M-5.68247e-06 0.000171665L1440 4.57764e-05L1440 45.1205C1375.91 42.1785 1304.85 44.0372 1246.17 50.6147L1178.62 58.1862C1097.56 67.2711 998.574 67.2711 917.518 58.1863L849.964 50.6147C768.908 41.5305 669.918 41.5305 588.865 50.6148L521.319 58.1863C440.263 67.2712 341.275 67.2712 260.219 58.1863L192.662 50.6148C133.358 43.9677 64.4556 42.1845 -1.72539e-06 45.2638L-5.68247e-06 0.000171665Z" fill="white"/>
+    <svg class="w-full h-auto" width="1440" height="60" viewBox="0 0 1440 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M1440 0H0V44.2737C238.954 33.5111 509.166 62.1526 835.5 59.8698C1071.65 58.218 1208.74 33.5735 1440 44.4141V0Z" fill="white"/>
     </svg>
     <div class="max-w-6xl mx-auto lg:px-6 px-4 flex flex-wrap items-center py-12">
       <div class="flex items-center md:w-auto w-full flex justify-center md:mb-0 mb-8">
