--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -10,7 +10,7 @@ layout: layouts/base.njk
       <div class="lg:w-2/5 w-full lg:pr-8">
         <h2 class="lg:text-5xl text-3xl leading-tight font-serif font-bold mb-6 lg:mr-16 lg:pr-8">{{ home.header.heading }}</h2>
         <p class="mb-8 opacity-75">{{ home.header.description }}</p>
-        <a class="inline-block py-2 px-8 bg-yellow-700 transition-1 hover:bg-yellow-800 rounded font-black text-blue-900" href="{{ global.tickets.url }}" target="_blank" rel="noopener noreferrer">{{ global.tickets.name }}</a>
+        <a class="inline-block py-2 px-8 bg-yellow-700 transition-1 hover:bg-yellow-800 rounded font-black text-black" href="{{ global.tickets.url }}" target="_blank" rel="noopener noreferrer">{{ global.tickets.name }}</a>
       </div>
     </div>
   </div>
@@ -18,7 +18,7 @@ layout: layouts/base.njk
     <path d="M1440 60H0V15.7263C238.954 26.4889 509.166 -2.15255 835.5 0.130155C1071.65 1.782 1208.74 26.4265 1440 15.5859V60Z" fill="white"/>
   </svg>
 </header>
-<section class="bg-white lg:py-24 pt  -12">
+<section class="bg-white lg:py-24 pt-12">
   <div class="max-w-6xl mx-auto flex flex-wrap text-blue-900 text-center">
     {%- for item in home.links -%}
       <div class="lg:w-1/3 w-full lg:px-6 px-4 flex flex-col lg:mb-0 mb-16">
