--- a/css/main.css
+++ b/css/main.css
@@ -7171,13 +7171,13 @@ body.menu-open {
 }
 
 .menu-open .mobile-menu {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .mobile-menu {
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
   -webkit-transition: -webkit-transform 1s cubic-bezier(0.19,1,0.22,1);
   transition: -webkit-transform 1s cubic-bezier(0.19,1,0.22,1);
   transition: transform 1s cubic-bezier(0.19,1,0.22,1);
@@ -7196,14 +7196,15 @@ body.menu-open {
   line-height: 1;
   margin-bottom: 0.5rem;
   font-weight: 700;
+  font-family: Roboto Slab, Georgia, Cambria, Times New Roman, Times, serif;
 }
 
 .content h1 {
   font-size: 3rem;
 }
 
-.content h2 {
-  margin-bottom: 1.5rem;
+.content h2, .content h4 {
+  margin-bottom: 1rem;
 }
 
 .content h4 {
