--- a/css/main.src.css
+++ b/css/main.src.css
@@ -44,11 +44,11 @@ body.menu-open {
 }
 
 .menu-open .mobile-menu {
-    transform: translateY(0);
+    transform: translateX(0);
 }
 
 .mobile-menu {
-    transform: translateY(-100%);
+    transform: translateX(-100%);
     transition: transform 1s cubic-bezier(0.19,1,0.22,1);
 }
 
@@ -63,14 +63,15 @@ body.menu-open {
     @apply leading-none;
     @apply mb-2;
     @apply font-bold;
+    @apply font-serif;
 }
 
 .content h1 {
     @apply text-5xl;
 }
 
-.content h2 {
-    @apply mb-6;
+.content h2, .content h4 {
+    @apply mb-4;
 }
 
 .content h4 {
