--- a/_includes/nav.njk
+++ b/_includes/nav.njk
@@ -5,7 +5,7 @@
         <img class="h-auto lg:w-64 w-48" src="{{ global.logo }}" alt="{{ global.title }}">
       </a>
     </h1>
-    <div class="mobile-menu ml-auto flex lg:flex-row flex-col lg:static fixed z-10 inset-0 lg:p-0 md:p-12 p-8 lg:pt-0 pt-8 lg:bg-transparent bg-white items-center lg:h-auto h-screen lg:shadow-none shadow-xl">
+    <div class="mobile-menu ml-auto flex lg:flex-row flex-col lg:static fixed z-10 inset-0 lg:p-0 md:px-8 px-4 py-8 lg:bg-transparent bg-white items-center lg:h-auto h-screen lg:shadow-none shadow-xl">
       <nav class="lg:flex justify-center items-center lg:w-auto w-full lg:mb-0 mb-8">
         {%- for item in global.navigation -%}
         <a class="lg:ml-8 border-b transition-1 border-transparent hover:border-white lg:text-white text-black lg:font-normal font-black lg:inline-block block lg:text-base text-3xl lg:mb-0 mb-4 lg:font-sans font-serif" href="{{ item.url }}">{{ item.name }}</a>
