--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -10,7 +10,10 @@ layout: layouts/base.njk
       <div class="lg:w-2/5 w-full lg:pr-8">
         <h2 class="lg:text-5xl text-3xl leading-tight font-serif font-bold mb-6 lg:mr-16 lg:pr-8">{{ home.header.heading }}</h2>
         <p class="mb-8 opacity-75">{{ home.header.description }}</p>
-        <a class="inline-block py-2 px-8 bg-yellow-700 transition-1 hover:bg-yellow-800 rounded font-black text-black" href="{{ global.tickets.url }}" target="_blank" rel="noopener noreferrer">{{ global.tickets.name }}</a>
+        <div class="flex items-center">
+            <a class="inline-block py-2 px-8 bg-yellow-700 transition-1 hover:bg-yellow-800 rounded font-black text-black" href="{{ global.tickets.url }}" target="_blank" rel="noopener noreferrer">{{ global.tickets.name }}</a>
+            <img class="h-auto w-32 ml-8" src="{{ global.rising_stars }}" alt="Rising Stars Logo">
+        </div>
       </div>
     </div>
   </div>
