--- a/css/main.css
+++ b/css/main.css
@@ -7217,7 +7217,19 @@ body.menu-open {
   margin-bottom: 1rem;
 }
 
-.content a {
+.content ul {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  list-style-position: inside;
+}
+
+.content li {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+  list-style-type: disc;
+}
+
+.content a:not(.no-underline) {
   text-decoration: underline;
 }
 
