--- a/_includes/layouts/general.njk
+++ b/_includes/layouts/general.njk
@@ -11,7 +11,7 @@ layout: layouts/base.njk
       <div class="lg:w-2/5 w-full lg:pr-24 mb-8">
         <h1 class="lg:text-5xl text-4xl font-black leading-tight mb-3 font-serif">{{ title }}</h1>
         <p class="lg:text-2xl text-xl lg:mb-12 mb-4">{{ subtitle }}</p>
-        <p class="lg:text-xl lg:mb-2">{{ event_date }}</p>
+        <p class="lg:text-xl lg:mb-2">{{ event_date }}<br> {{doors}}</p>
         <a class="lg:text-xl leading-tight underline hover:no-underline" href="{{ location_url }}">{{ location }}</a>
       </div>
       <div class="lg:w-3/5 w-full pt-3 content">
