--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -5,7 +5,9 @@ layout: layouts/base.njk
   <div class="max-w-6xl mx-auto lg:px-6 px-4">
     <div class="flex flex-wrap flex-row-reverse items-center lg:pt-12 lg:pb-24 pb-12">
       <div class="lg:w-3/5 w-full lg:pl-16 lg:mb-0 mb-10">
-        <div class="border-8 border-white lg:rotate-1 w-full h-auto rounded shadow-xl" style="width: 100%; height: 0px; position: relative; padding-bottom: 56.250%;"><iframe src="https://streamable.com/s/xqrxg/hycmpu" frameborder="0" width="100%" height="100%" allowfullscreen style="width: 100%; height: 100%; position: absolute;"></iframe></div>
+        <div class="lg:rotate-1 w-full h-auto rounded shadow-xl" style="width: 100%;">
+          <iframe class="border-8 border-white w-full" width="560" height="315" src="https://www.youtube.com/embed/npFzMudJ6eQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>
       <div class="lg:w-2/5 w-full lg:pr-8">
         <h2 class="lg:text-5xl text-3xl leading-tight font-serif font-bold mb-6 lg:mr-16 lg:pr-8">{{ home.header.heading }}</h2>
