--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -14,7 +14,8 @@ layout: layouts/base.njk
         <p class="mb-8 opacity-75">{{ home.header.description }}</p>
         <div class="flex items-center">
             <a class="inline-block py-2 px-8 bg-yellow-700 transition-1 hover:bg-yellow-800 rounded font-black text-black" href="{{ global.tickets.url }}" target="_blank" rel="noopener noreferrer">{{ global.tickets.name }}</a>
-            <img class="h-auto w-32 ml-8" src="{{ global.rising_stars }}" alt="Rising Stars Logo">
+            <img class="h-auto w-24 ml-8" src="{{ global.rising_stars }}" alt="Rising Stars Logo">
+            <a class="block w-24 ml-8" href="https://northernfinancialgroup.ca/" target="_blank" rel="noreferrer"><img class="logo w-full h-auto" src="../images/sponsor-logos/northern-financial-group.jpg" alt="Northern Financial Group"></a>
         </div>
       </div>
     </div>
