--- a/_includes/nav.njk
+++ b/_includes/nav.njk
@@ -1,5 +1,5 @@
 <div class="max-w-6xl mx-auto lg:px-6 px-4 pb-12">
-  <div class="lg:pt-12 pt-6 flex items-end">
+  <div class="lg:pt-12 pt-6 flex items-center">
     <h1 class="text-2xl">
       <a href="/">
         <img class="h-auto lg:w-64 w-48" src="{{ global.logo }}" alt="{{ global.title }}">
