--- a/css/main.css
+++ b/css/main.css
@@ -7233,7 +7233,7 @@ body.menu-open {
   text-decoration: underline;
 }
 
-.content img {
+.content img:not(.logo) {
   margin-bottom: 2rem;
   border-radius: 0.25rem;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
